# minijson2

./: CMakeLists.txt  README.md
include/minijson2/: minijson2.hpp
src/: ezparse.cpp  minijson2-test.cpp  minijson2.cpp  structread-example.cpp
test/: ac_ship.json  array.json  array_array.json  escapes.json  object.json  object_mini.json  values.json
